# stock-market-data-lakehouse

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: settings.py
data/sample/: daily_prices.csv
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: safe_divide.sql
dbt/models/: sources.yml
dbt/models/marts/: agg_weekly_performance.sql  fact_daily_performance.sql  schema.yml
dbt/models/staging/: schema.yml  stg_daily_prices.sql
src/api/: app.py
src/ingestion/: api_ingestion.py  s3_uploader.py  yahoo_ingestion.py
src/lakehouse/: delta_manager.py
src/orchestration/: deployments.py  flows.py
src/quality/: validators.py
src/utils/: logging_utils.py
terraform/: main.tf  outputs.tf  resources.tf  variables.tf
tests/: test_api.py  test_ingestion.py  test_s3_uploader.py  test_validators.py
